# telegram-persona

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
src/telegram_persona/: analyzer.py  chunker.py  cli.py  config.py  parser.py  persona.py  prompts.py  schema.py
templates/: core_prompt.md.j2  system_prompt.md.j2
